# charm

./: .gitignore  Cargo.toml  README.md  build.rs
docs/: architecture.md
proto/: charm.proto  raft.proto
src/: lib.rs  main.rs  net.rs  rng.rs  server.rs  tracing_util.rs
src/charm/: client.rs  config.rs  mod.rs  pb.rs  retry.rs  server.rs  state_machine.rs
src/raft/: commands.rs  config.rs  events.rs  log.rs  messages.rs  mod.rs  network.rs  node.rs  outbound_network.rs  pb.rs  raft_driver.rs  state_machine.rs  types.rs
src/raft/core/: config.rs  core.rs  error.rs  handle.rs  log.rs  mod.rs  node.rs  queue.rs
src/raft/core/storage/: in_mem.rs  mod.rs  sqlite.rs  sqlite_storage.rs
src/raft/network/: inbound_network.rs  mod.rs  outbound_network.rs
src/storage/: mod.rs  sqlite_kv.rs
tests/: test.rs
tests/linearizability/: mod.rs
tests/timing/: mod.rs
