[package]
name = "charm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[lib]
name = "charm"
path = "src/lib.rs"

[dependencies]
tracing = "0.1.40"
derive_builder = "0.20.1"
futures = "0.3.30"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.16", features = ["derive"] }
humantime = "2.1.0"
prost = "0.13.1"
async-stream = "0.3.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio-retry = "0.3.0"
itertools = "0.13.0"
anyhow = { version = "1.0.86", features = ["backtrace"] }
tower = { version = "0.5.0", features = ["full"] }
wyrand = "0.2.1"
dashmap = "6.1.0"
failsafe = "1.3.0"
tokio = { version = "1.40.0", features = ["full"] }
tonic = "0.12.2"
rand = "0.8.5"

[dev-dependencies]
turmoil = "0.6.3"

[build-dependencies]
tonic-build = "0.12.2"
